fixed mobile view gap between header and slots

--- a/static/style.css
+++ b/static/style.css
@@ -146,6 +146,10 @@ html {
 /* Week / Day calendar */
 /* --------------------- */
 
+.table-responsive {
+    margin-bottom: 0 !important;
+}
+
 .hd-schedule, .hd-schedule-header {
     text-align: center;
     margin: 0 !important;
